Issue #26862: SYS_getdents64 does not need to be defined on android API 21.